examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/let_list.st
language core;
extend with #let-bindings;
extend with #lists;


fn main(n : Nat) -> Nat {
  return let y = [0, true] in y
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
